Parametrize plugins and extra extensions that were hardcoded in build-quarkus-app script

--- a/apps-maven-builder/pom.xml
+++ b/apps-maven-builder/pom.xml
@@ -30,6 +30,29 @@
         <build.quarkusapp.argument.quarkusplatform.groupid>io.quarkus.platform</build.quarkusapp.argument.quarkusplatform.groupid>
         <build.quarkusapp.argument.quarkusplatform.version>3.8.6</build.quarkusapp.argument.quarkusplatform.version>
         <build.quarkusapp.argument.kogitoversion>999-SNAPSHOT</build.quarkusapp.argument.kogitoversion>
+
+        <!-- Start of block of plugins and dependencies that will be given to build-quarkus-app.sh script-->
+        <version.maven-resouces-plugin>3.3.1</version.maven-resouces-plugin>
+        <version.maven-install-plugin>3.1.3</version.maven-install-plugin>
+        <version.maven-jar-plugin>3.4.2</version.maven-jar-plugin>
+        <version.maven-clean-plugin>3.4.0</version.maven-clean-plugin>
+        <version.maven-deploy-plugin>3.1.3</version.maven-deploy-plugin>
+        <version.maven-site-plugin>3.21.0</version.maven-site-plugin>
+        <version.maven-compiler-plugin>3.13.0</version.maven-compiler-plugin>
+        <version.maven-surefire-plugin>3.5.2</version.maven-surefire-plugin>
+        <version.brotli4j>1.16.0</version.brotli4j> <!-- Needs to be aligned with same version used on quarkus-bom -->
+
+        <gav.maven-resouces-plugin>org.apache.maven.plugins:maven-resources-plugin:${version.maven-resouces-plugin}</gav.maven-resouces-plugin>
+        <gav.maven-install-plugin>org.apache.maven.plugins:maven-install-plugin:${version.maven-install-plugin}</gav.maven-install-plugin>
+        <gav.maven-jar-plugin>org.apache.maven.plugins:maven-jar-plugin:${version.maven-jar-plugin}</gav.maven-jar-plugin>
+        <gav.maven-clean-plugin>org.apache.maven.plugins:maven-clean-plugin:${version.maven-clean-plugin}</gav.maven-clean-plugin>
+        <gav.maven-deploy-plugin>org.apache.maven.plugins:maven-deploy-plugin:${version.maven-deploy-plugin}</gav.maven-deploy-plugin>
+        <gav.maven-site-plugin>org.apache.maven.plugins:maven-site-plugin:${version.maven-site-plugin}</gav.maven-site-plugin>
+
+        <build.quarkusapp.argument.maven-plugins-gav>${gav.maven-resouces-plugin} ${gav.maven-install-plugin} ${gav.maven-jar-plugin} ${gav.maven-clean-plugin} ${gav.maven-deploy-plugin} ${gav.maven-site-plugin}</build.quarkusapp.argument.maven-plugins-gav>
+        <build.quarkusapp.argument.properties-with-versions>compiler-plugin.version:${version.maven-compiler-plugin} surefire-plugin.version:${version.maven-surefire-plugin}</build.quarkusapp.argument.properties-with-versions>
+        <build.quarkusapp.argument.quarkus-extensions-extra-deps>com.aayushatharva.brotli4j:native-linux-aarch64:${version.brotli4j}</build.quarkusapp.argument.quarkus-extensions-extra-deps>
+        <!-- End of block of plugins and dependencies that will be given to build-quarkus-app.sh script-->
     </properties>
 
     <modules>
@@ -40,6 +63,52 @@
     </modules>
 
     <build>
+        <pluginManagement>
+            <plugins>
+                <!-- Start of block of plugins that will be given to build-quarkus-app.sh script-->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-resources-plugin</artifactId>
+                    <version>${version.maven-resouces-plugin}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-install-plugin</artifactId>
+                    <version>${version.maven-install-plugin}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-jar-plugin</artifactId>
+                    <version>${version.maven-jar-plugin}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-clean-plugin</artifactId>
+                    <version>${version.maven-clean-plugin}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-deploy-plugin</artifactId>
+                    <version>${version.maven-deploy-plugin}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-site-plugin</artifactId>
+                    <version>${version.maven-site-plugin}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>${version.maven-compiler-plugin}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>${version.maven-surefire-plugin}</version>
+                </plugin>
+                <!-- End of block of plugins that will be given to build-quarkus-app.sh script-->
+            </plugins>
+        </pluginManagement>
         <plugins>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -59,6 +128,9 @@
                                 <argument>${build.quarkusapp.argument.quarkusplatform.groupid}</argument>
                                 <argument>${build.quarkusapp.argument.quarkusplatform.version}</argument>
                                 <argument>${build.quarkusapp.argument.kogitoversion}</argument>
+                                <argument>${build.quarkusapp.argument.maven-plugins-gav}</argument>
+                                <argument>${build.quarkusapp.argument.properties-with-versions}</argument>
+                                <argument>${build.quarkusapp.argument.quarkus-extensions-extra-deps}</argument>
                             </arguments>
                         </configuration>
                     </execution>
@@ -75,6 +147,9 @@
                                 <argument>${build.quarkusapp.argument.quarkusplatform.groupid}</argument>
                                 <argument>${build.quarkusapp.argument.quarkusplatform.version}</argument>
                                 <argument>${build.quarkusapp.argument.kogitoversion}</argument>
+                                <argument>${build.quarkusapp.argument.maven-plugins-gav}</argument>
+                                <argument>${build.quarkusapp.argument.properties-with-versions}</argument>
+                                <argument>${build.quarkusapp.argument.quarkus-extensions-extra-deps}</argument>
                             </arguments>
                         </configuration>
                     </execution>
