replace kogito string by osl

--- a/apps-maven-builder/builder-quarkus-app/pom.xml
+++ b/apps-maven-builder/builder-quarkus-app/pom.xml
@@ -3,13 +3,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.kie.kogito</groupId>
-        <artifactId>kogito-image-build-artifacts-parent</artifactId>
+        <groupId>com.redhat.osl</groupId>
+        <artifactId>osl-image-build-artifacts-parent</artifactId>
         <version>999-SNAPSHOT</version>
     </parent>
 
-    <artifactId>kogito-builder-quarkus-app</artifactId>
-    <name>Kogito Builder Quarkus App - Quarkus app zip</name>
+    <artifactId>osl-builder-quarkus-app</artifactId>
+    <name>OSL Builder Quarkus App - Quarkus app zip</name>
 
     <build>
         <plugins>
