--- a/osl-operator-image/logic-rhel8-operator-image.yaml
+++ b/osl-operator-image/logic-rhel8-operator-image.yaml
@@ -29,10 +29,13 @@
       container:
         image_build_method: imagebuilder
         remote_source:
-          repo: https://github.com/kiegroup/kogito-serverless-operator
-          ref: 078cef15b1860d0c52fc1fd479a37d43819f09a3
+          repo: https://github.com/kubesmarts/kie-tools
+          ref: 7aea06c5e112c3236d8ae86bc5ca0f85fc59917b
           pkg_managers:
             - gomod
+          packages:
+            gomod:
+              - path: packages/sonataflow-operator
         platforms:
           only:
             - x86_64
