--- a/apps-maven-builder/pom.xml
+++ b/apps-maven-builder/pom.xml
@@ -38,6 +38,7 @@
         <version.maven-site-plugin>3.21.0</version.maven-site-plugin>
         <version.maven-compiler-plugin>3.13.0</version.maven-compiler-plugin>
         <version.maven-surefire-plugin>3.5.2</version.maven-surefire-plugin>
+        <version.maven-failsafe-plugin>3.5.2</version.maven-failsafe-plugin>
         <version.brotli4j>1.16.0</version.brotli4j> <!-- Needs to be aligned with same version used on quarkus-bom -->
 
         <gav.maven-resouces-plugin>org.apache.maven.plugins:maven-resources-plugin:${version.maven-resouces-plugin}</gav.maven-resouces-plugin>
@@ -48,7 +49,7 @@
         <gav.maven-site-plugin>org.apache.maven.plugins:maven-site-plugin:${version.maven-site-plugin}</gav.maven-site-plugin>
 
         <build.quarkusapp.argument.maven-plugins-gav>${gav.maven-resouces-plugin} ${gav.maven-install-plugin} ${gav.maven-jar-plugin} ${gav.maven-clean-plugin} ${gav.maven-deploy-plugin} ${gav.maven-site-plugin}</build.quarkusapp.argument.maven-plugins-gav>
-        <build.quarkusapp.argument.properties-with-versions>compiler-plugin.version:${version.maven-compiler-plugin} surefire-plugin.version:${version.maven-surefire-plugin}</build.quarkusapp.argument.properties-with-versions>
+        <build.quarkusapp.argument.properties-with-versions>compiler-plugin.version:${version.maven-compiler-plugin} surefire-plugin.version:${version.maven-surefire-plugin} failsafe-plugin.version:${version.maven-failsafe-plugin}</build.quarkusapp.argument.properties-with-versions>
         <build.quarkusapp.argument.quarkus-extensions-extra-deps>com.aayushatharva.brotli4j:native-linux-aarch64:${version.brotli4j}</build.quarkusapp.argument.quarkus-extensions-extra-deps>
         <!-- End of block of plugins and dependencies that will be given to build-quarkus-app.sh script-->
 
@@ -117,6 +118,11 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${version.maven-surefire-plugin}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-failsafe-plugin</artifactId>
+                    <version>${version.maven-failsafe-plugin}</version>
                 </plugin>
                 <!-- End of block of plugins that will be given to build-quarkus-app.sh script-->
             </plugins>
