Updating Quarkus to 3.20.1 to align with latest Kogito SNAPSHOT
Signed-off-by: Ricardo Zanini <ricardozanini@gmail.com>

--- a/apps-maven-builder/pom.xml
+++ b/apps-maven-builder/pom.xml
@@ -26,7 +26,9 @@
         <build.quarkusapp.argument.imagename.devmode>osl-swf-devmode</build.quarkusapp.argument.imagename.devmode>
         <build.quarkusapp.argument.imagename.builder>osl-swf-builder</build.quarkusapp.argument.imagename.builder>
         <build.quarkusapp.argument.quarkusplatform.groupid>io.quarkus.platform</build.quarkusapp.argument.quarkusplatform.groupid>
-        <build.quarkusapp.argument.quarkusplatform.version>3.15.3</build.quarkusapp.argument.quarkusplatform.version>
+        <build.quarkusapp.argument.quarkusplatform.version>3.20.1</build.quarkusapp.argument.quarkusplatform.version>
+        <!-- Quarkus version and Quarkus Platform version might be different due to rebuilds downstream -->
+        <build.quarkusapp.argument.quarkus.version>3.20.1</build.quarkusapp.argument.quarkus.version>
         <build.quarkusapp.argument.kogitoversion>999-SNAPSHOT</build.quarkusapp.argument.kogitoversion>
 
         <!-- Start of block of plugins and dependencies that will be given to build-quarkus-app.sh script-->
@@ -149,6 +151,7 @@
                                 <argument>${build.quarkusapp.argument.maven-plugins-gav}</argument>
                                 <argument>${build.quarkusapp.argument.properties-with-versions}</argument>
                                 <argument>${build.quarkusapp.argument.quarkus-extensions-extra-deps}</argument>
+                                <argument>${build.quarkusapp.argument.quarkus.version}</argument>
                             </arguments>
                         </configuration>
                     </execution>
@@ -168,6 +171,7 @@
                                 <argument>${build.quarkusapp.argument.maven-plugins-gav}</argument>
                                 <argument>${build.quarkusapp.argument.properties-with-versions}</argument>
                                 <argument>${build.quarkusapp.argument.quarkus-extensions-extra-deps}</argument>
+                                <argument>${build.quarkusapp.argument.quarkus.version}</argument>
                             </arguments>
                         </configuration>
                     </execution>
