--- a/osl-cli-artifacts-image/modules/com.redhat.osl.cli.artifacts/module.yaml
+++ b/osl-cli-artifacts-image/modules/com.redhat.osl.cli.artifacts/module.yaml
@@ -13,7 +13,7 @@
 # limitations under the License.
 
 name: "com.redhat.osl.cli.artifacts"
-version: "1.35.0"
+version: "999.0.0.main"
 description: "Copy binaries from the packager image"
 
 execute:
