--- a/osl-operator-image/logic-rhel8-operator-image.yaml
+++ b/osl-operator-image/logic-rhel8-operator-image.yaml
@@ -14,7 +14,7 @@
 
 - schema_version: 1
   name: "operator-builder"
-  version: "1.35.0"
+  version: "999.0.0.main"
   from: "registry.access.redhat.com/ubi8/go-toolset:1.23"
   description: "Golang builder image for the Red Hat OpenShift Serverless Logic Operator"
 
@@ -43,7 +43,7 @@
             - aarch64
 
 - name: "openshift-serverless-1/logic-rhel8-operator"
-  version: "1.35.0"
+  version: "999.0.0.main"
   from: "registry.access.redhat.com/ubi8/ubi-micro:latest"
   description: "Runtime Image for the Red Hat OpenShift Serverless Logic Operator"
 
