--- a/images-dist/logic-swf-devmode-rhel8-image.yaml
+++ b/images-dist/logic-swf-devmode-rhel8-image.yaml
@@ -24,9 +24,9 @@ description: "Red Hat build of Kogito Serverless Workflow development mode image
 
 labels:
   - name: "io.quarkus.platform.version"
-    value: "3.15.3.1"
+    value: "3.20.1"
   - name: "org.kie.kogito.version"
-    value: "999-20250511-local"
+    value: "999-SNAPSHOT"
   - name: "io.k8s.description"
     value: "Red Hat build of Kogito Serverless Workflow development mode image with Quarkus extensions libraries preinstalled."
   - name: "io.k8s.display-name"
