--- a/images-dist/modules/kogito-project-versions/module.yaml
+++ b/images-dist/modules/kogito-project-versions/module.yaml
@@ -23,13 +23,13 @@ description: "Kogito Project versions information"
 
 envs:
   - name: "KOGITO_VERSION"
-    value: "999-20250511-local"
+    value: "999-SNAPSHOT"
     description: Defines the Kogito version to be used by the builder images. Not intended to be changed by end user.
   - name: "QUARKUS_PLATFORM_GROUPID"
     value: "io.quarkus.platform"
     description: Defines the Quarkus Platform groupId to be used by the builder images. Not intended to be changed by end user.
   - name: "QUARKUS_PLATFORM_VERSION"
-    value: "3.15.3.1"
+    value: "3.20.1"
     description: Defines the Quarkus Platform version to be used by the builder images. Not intended to be changed by end user.
   - name: "SONATAFLOW_QUARKUS_DEVUI_VERSION"
     value: "### SET ME DURING BUILD PROCESS ###"
