Improve workflow PR_CHECK debugging experience

--- a/.github/workflows/pr_check.yml
+++ b/.github/workflows/pr_check.yml
@@ -23,4 +23,4 @@ jobs:
         run: |
           settings_xml=$(realpath .github/supporting_files/pr_check_settings.xml)
           export MAVEN_OPTIONS="-s ${settings_xml}"
-          mvn -f apps-maven-builder clean install
+          mvn -B -f apps-maven-builder clean install
