--- a/apps-maven-builder/builder-quarkus-app/pom.xml
+++ b/apps-maven-builder/builder-quarkus-app/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.redhat.osl</groupId>
         <artifactId>osl-image-build-artifacts-parent</artifactId>
-        <version>999-SNAPSHOT</version>
+        <version>9.104.0</version>
     </parent>
 
     <artifactId>osl-builder-quarkus-app</artifactId>
