--- a/images-dist/logic-db-migrator-tool-rhel9-image.yaml
+++ b/images-dist/logic-db-migrator-tool-rhel9-image.yaml
@@ -37,7 +37,7 @@ labels:
   - name: "io.openshift.expose-services"
     value: "8080:http"
   - name: "org.kie.kogito.version"
-    value: "9.104.0"
+    value: "9.104.0.redhat-00002"
 
 envs:
   - name: "SCRIPT_DEBUG"
