--- a/images-dist/logic-management-console-rhel9-image.yaml
+++ b/images-dist/logic-management-console-rhel9-image.yaml
@@ -25,7 +25,7 @@ labels:
   - name: "io.quarkus.platform.version"
     value: "3.20.2"
   - name: "org.kie.kogito.version"
-    value: "9.104.0"
+    value: "9.104.0.redhat-00002"
   - name: "maintainer"
     value: "Red Hat <serverless-logic-team@redhat.com>"
   - name: "io.k8s.description"
