--- a/images-dist/modules/kogito-project-versions/module.yaml
+++ b/images-dist/modules/kogito-project-versions/module.yaml
@@ -23,7 +23,7 @@ description: "Kogito Project versions information"
 
 envs:
   - name: "KOGITO_VERSION"
-    value: "9.104.0"
+    value: "9.104.0.redhat-00002"
     description: Defines the Kogito version to be used by the builder images. Not intended to be changed by end user.
   - name: "QUARKUS_PLATFORM_GROUPID"
     value: "com.redhat.quarkus.platform"
@@ -32,5 +32,5 @@ envs:
     value: "3.20.2"
     description: Defines the Quarkus Platform version to be used by the builder images. Not intended to be changed by end user.
   - name: "SONATAFLOW_QUARKUS_DEVUI_VERSION"
-    value: "9.104.0"
+    value: "9.104.0.redhat-00002"
     description: Defines the SonataFlow Quarkus Dev UI version to be used by the devmode image. Not intended to be changed by end user.
