--- a/images-dist/logic-management-console-rhel9-image.yaml
+++ b/images-dist/logic-management-console-rhel9-image.yaml
@@ -23,7 +23,7 @@ description: "OpenShift Serverless Logic Management Console Image"
 
 labels:
   - name: "io.quarkus.platform.version"
-    value: "3.20.2"
+    value: "3.20.2.SP1-redhat-00003"
   - name: "org.kie.kogito.version"
     value: "9.104.0.redhat-00002"
   - name: "maintainer"
