revert change of branch to keep it the latest product one there

--- a/osl-operator-image/logic-rhel9-operator-image.yaml
+++ b/osl-operator-image/logic-rhel9-operator-image.yaml
@@ -72,7 +72,8 @@
     extra_dir: osbs-extra
     repository:
       name: containers/openshift-serverless-1-logic-operator
-      branch: openshift-serverless-main-rhel-9
+      #CI prod nightly set this to openshift-serverless-nightly-rhel-9
+      branch: openshift-serverless-1.37-rhel-9
 
   run:
     user: "1001"
