Update PR check workflow to include path filter
Add path filter for pull request checks

--- a/.github/workflows/pr_check.yml
+++ b/.github/workflows/pr_check.yml
@@ -4,6 +4,8 @@ on:
   pull_request:
     branches: ["**"]
     types: [opened, reopened, ready_for_review, synchronize]
+    paths:
+      - 'apps-maven-builder/**'
 
 jobs:
   run:
