--- a/images-dist/logic-swf-builder-rhel9-image.yaml
+++ b/images-dist/logic-swf-builder-rhel9-image.yaml
@@ -28,7 +28,7 @@ labels:
   - name: "io.openshift.s2i.destination"
     value: "/tmp"
   - name: "io.quarkus.platform.version"
-    value: "3.20.2"
+    value: "3.20.2.SP1-redhat-00003"
   - name: "org.kie.kogito.version"
     value: "9.104.0.redhat-00002"
   - name: "com.redhat.component"
