--- a/images-dist/modules/kogito-project-versions/module.yaml
+++ b/images-dist/modules/kogito-project-versions/module.yaml
@@ -30,6 +30,8 @@ envs:
     description: Defines the Quarkus Platform groupId to be used by the builder images. Not intended to be changed by end user.
   - name: "QUARKUS_PLATFORM_VERSION"
     value: "3.20.2.SP1-redhat-00003"
+  - name: "QUARKUS_VERSION"
+    value: "3.20.2.redhat-00004"
     description: Defines the Quarkus Platform version to be used by the builder images. Not intended to be changed by end user.
   - name: "SONATAFLOW_QUARKUS_DEVUI_VERSION"
     value: "9.104.0.redhat-00002"
