Update PR check workflow to include .github directory

--- a/.github/workflows/pr_check.yml
+++ b/.github/workflows/pr_check.yml
@@ -6,6 +6,7 @@ on:
     types: [opened, reopened, ready_for_review, synchronize]
     paths:
       - 'apps-maven-builder/**'
+      - '.github/**'
 
 jobs:
   run:
