--- a/.github/workflows/pr_check.yml
+++ b/.github/workflows/pr_check.yml
@@ -38,7 +38,7 @@ jobs:
           echo "git clone --depth 1 --branch  $DEPS_BRANCHNAME $DROOLS_REPO_URL"
           git clone --depth 1 --branch $DEPS_BRANCHNAME $DROOLS_REPO_URL
           cd drools
-          mvn clean install -B -Dquickly
+          mvn clean install -B -Dquickly -DskipTests -DskipITs
           cd ..
           rm -rf drools
           echo "::endgroup::"
@@ -47,7 +47,7 @@ jobs:
           echo "git clone --depth 1 --branch $DEPS_BRANCHNAME $KOGITO_RUNTIMES_REPO_URL"
           git clone --depth 1 --branch $DEPS_BRANCHNAME $KOGITO_RUNTIMES_REPO_URL
           cd kogito-runtimes
-          mvn clean install -B -Dquickly
+          mvn clean install -B -Dquickly -DskipTests -DskipITs
           cd ..
           rm -rf kogito-runtimes
           echo "::endgroup::"
@@ -56,7 +56,7 @@ jobs:
           echo "git clone --depth 1 --branch $DEPS_BRANCHNAME $KOGITO_APPS_REPO_URL"
           git clone --depth 1 --branch $DEPS_BRANCHNAME $KOGITO_APPS_REPO_URL
           cd kogito-apps
-          mvn clean install -B -Dquickly
+          mvn clean install -B -Dquickly -DskipTests -DskipITs
           cd ..
           rm -rf kogito-apps
           echo "::endgroup::"
