[9.104.x-prod] Enhance PR check workflow with repository cloning steps (#71)
* [9.104.x-prod] Enhance PR check workflow with repository cloning steps

Added environment variables for repository URLs and branch name. Included steps to clone and build Drools, Kogito runtimes, and Kogito apps in the CI workflow.

Testing changes

* Update variable usage

* Update PR check workflow to include .github directory

* Update Maven options in PR check workflow

* Skip tests during Maven build in PR workflow

* Update Maven command to include integration tests module

* Exclude kogito-codegen-integration-tests from build

* Change Maven build to skip processes integration tests

* Update Maven command to use correct module name

* Add -Dproductized flag to Maven install commands

* Update pr_check_settings.xml with local repository

Added local repository path to Maven settings.

* Add nightly deployment configuration to PR workflow

* Add KIE_TOOLS_REPO_URL to PR check workflow

--- a/.github/workflows/pr_check.yml
+++ b/.github/workflows/pr_check.yml
@@ -6,10 +6,19 @@ on:
     types: [opened, reopened, ready_for_review, synchronize]
     paths:
       - 'apps-maven-builder/**'
+      - '.github/**'
 
 jobs:
   run:
     runs-on: ubuntu-latest
+    env:
+      DROOLS_REPO_URL: "https://github.com/kiegroup/drools"
+      KOGITO_RUNTIMES_REPO_URL: "https://github.com/kiegroup/kogito-runtimes"
+      KOGITO_APPS_REPO_URL: "https://github.com/kiegroup/kogito-apps"
+      KIE_TOOLS_REPO_URL: "https://github.com/kubesmarts/kie-tools"
+      DEPS_BRANCHNAME: "9.104.x-prod"
+      NIGHTLY: "true"
+      NIGHTLY_DEPLOY_FOLDER: "/home/runner/.m2/repository"
     steps:
       - name: "Checkout Repository"
         uses: actions/checkout@v4
@@ -19,6 +28,50 @@ jobs:
         with:
           distribution: "temurin"
           java-version: 17
+
+      - name: Clone and Build Drools, Runtimes and Apps repositories
+        shell: bash
+        run: |
+          settings_xml=$(realpath .github/supporting_files/pr_check_settings.xml)
+          export MAVEN_OPTIONS="-s ${settings_xml}"
+          echo "Building Drools, Runtimes and Apps"
+          cd ..
+  
+          echo "::group::Cloning drools branch..."
+          echo "git clone --depth 1 --branch  $DEPS_BRANCHNAME $DROOLS_REPO_URL"
+          git clone --depth 1 --branch $DEPS_BRANCHNAME $DROOLS_REPO_URL
+          cd drools
+          mvn clean install -B -Dquickly -DskipTests -DskipITs -Dproductized
+          cd ..
+          rm -rf drools
+          echo "::endgroup::"
+  
+          echo "::group::Cloning kogito-runtimes $DEPS_BRANCHNAME branch..."
+          echo "git clone --depth 1 --branch $DEPS_BRANCHNAME $KOGITO_RUNTIMES_REPO_URL"
+          git clone --depth 1 --branch $DEPS_BRANCHNAME $KOGITO_RUNTIMES_REPO_URL
+          cd kogito-runtimes
+          mvn clean install -B -Dquickly -DskipTests -DskipITs -Dproductized
+          cd ..
+          rm -rf kogito-runtimes
+          echo "::endgroup::"
+  
+          echo "::group::Cloning kogito-apps $DEPS_BRANCHNAME branch..."
+          echo "git clone --depth 1 --branch $DEPS_BRANCHNAME $KOGITO_APPS_REPO_URL"
+          git clone --depth 1 --branch $DEPS_BRANCHNAME $KOGITO_APPS_REPO_URL
+          cd kogito-apps
+          mvn clean install -B -Dquickly -DskipTests -DskipITs -Dproductized
+          cd ..
+          rm -rf kogito-apps
+          echo "::endgroup::"
+
+           echo "::group::Cloning kie-tools $DEPS_BRANCHNAME branch..."
+          echo "git clone --depth 1 --branch $DEPS_BRANCHNAME $KIE_TOOLS_REPO_URL"
+          git clone --depth 1 --branch $DEPS_BRANCHNAME $KIE_TOOLS_REPO_URL
+          cd kie-tools
+          mvn clean install -B -Dquickly -DskipTests -DskipITs -Dproductized
+          cd ..
+          rm -rf kie-tools
+          echo "::endgroup::"
 
       - name: Build apps-maven-builder
         shell: bash
