--- a/images-dist/logic-operator-bundle-image.yaml
+++ b/images-dist/logic-operator-bundle-image.yaml
@@ -36,11 +36,11 @@ labels:
   - name: operators.operatorframework.io.bundle.metadata.v1
     value: metadata/
   - name: operators.operatorframework.io.bundle.package.v1
-    value: logic-operator-rhel9
+    value: logic-operator
   - name: operators.operatorframework.io.bundle.channels.v1
-    value: "alpha"
+    value: "stable"
   - name: operators.operatorframework.io.bundle.channel.default.v1
-    value: alpha
+    value: stable
   - name: operators.operatorframework.io.metrics.mediatype.v1
     value: metrics+v1
   - name: operators.operatorframework.io.metrics.builder
