SRVLOGIC-732: Add the registry.quarkus.redhat.com  and registry.quarkus.io to the swf-builder and swf-devmode images

--- a/images-dist/logic-swf-devmode-rhel9-image.yaml
+++ b/images-dist/logic-swf-devmode-rhel9-image.yaml
@@ -53,6 +53,7 @@ modules:
     - name: com.redhat.osl.maven
     - name: org.kie.kogito.project.versions
     - name: org.kie.sonataflow.common.scripts
+    - name: org.kie.sonataflow.common.quarkus.registry
     - name: org.kie.sonataflow.devmode.runtime.common
     - name: com.redhat.osl.swf.devmode.runtime
     - name: com.redhat.osl.pkg-update
