--- a/.github/workflows/pr_check.yml
+++ b/.github/workflows/pr_check.yml
@@ -16,15 +16,15 @@ jobs:
       KOGITO_RUNTIMES_REPO_URL: "https://github.com/kiegroup/kogito-runtimes"
       KOGITO_APPS_REPO_URL: "https://github.com/kiegroup/kogito-apps"
       KIE_TOOLS_REPO_URL: "https://github.com/kubesmarts/kie-tools"
-      DEPS_BRANCHNAME: "9.104.x-prod"
+      DEPS_BRANCHNAME: "999-SNAPSHOT"
       NIGHTLY: "true"
       NIGHTLY_DEPLOY_FOLDER: "/home/runner/.m2/repository"
     steps:
       - name: "Checkout Repository"
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
 
       - name: Setup Java
-        uses: actions/setup-java@v4
+        uses: actions/setup-java@v5
         with:
           distribution: "temurin"
           java-version: 17
